# FileBackupApp

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/Core/: BackupManager.h  EncryptionManager.h  FileScanner.h  RestoreManager.h
include/UI/: UserInterface.h
src/: main.cpp
src/Core/: BackupManager.cpp  EncryptionManager.cpp  FileScanner.cpp  RestoreManager.cpp
src/UI/: UserInterface.cpp
tests/: test_BackupManager.cpp  test_EncryptionManager.cpp  test_main.cpp
